<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>temporis_ros2</name>
  <version>0.1.0</version>
  <description>
    Temporis network latency shaper for ROS2.
    Applies realistic, load-dependent latency models to inter-agent
    communication in simulation. Transparent to agent code — enabled
    via launch file remapping, disabled by removing the shaper node.
  </description>
  <maintainer email="euge@temporis.dev">Evgeniia Slepynina</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
